		What has changed in GDB?
	     (Organized release by release)


*** Changes since GDB 12

* New commands

maint jit dump
  Dump an in-memory JIT object into a file.

* MI changes

  ** '-break-insert -l'

     Added optional -l <simd-lane-id> argument to MI command -break-insert.
     A lane can be specified only together with the thread: user must provide
     a thread with -p argument.

     MI result output for -break-insert command will also contain
     lane="simd-lane-id" information if -l argument was specified.

     Also the MI output of -break-list and -break-info commands will have
     lane="simd-lane-id" information if the breakpoint is thread and SIMD lane
     spefific.

*** Changes in GDB 12

* DBX mode is deprecated, and will be removed in GDB 13

* GDB 12 is the last release of GDB that will support building against
  Python 2.  From GDB 13, it will only be possible to build GDB itself
  with Python 3 support.

* Improved C++ template support

  GDB now treats functions/types involving C++ templates like it does function
  overloads.  Users may omit parameter lists to set breakpoints on families of
  template functions, including types/functions composed of multiple template types:

  (gdb) break template_func(template_1, int)

  The above will set breakpoints at every function `template_func' where
  the first function parameter is any template type named `template_1' and
  the second function parameter is `int'.

  TAB completion also gains similar improvements.

* The FreeBSD native target now supports async mode.

* Configure changes

--enable-threading

  Enable or disable multithreaded symbol loading.  This is enabled
  by default, but passing --disable-threading or --enable-threading=no
  to configure will disable it.

  Disabling this can cause a performance penalty when there are a lot of
  symbols to load, but is useful for debugging purposes.

* New commands

maint set backtrace-on-fatal-signal on|off