@@ -9,6 +9,14 @@
 maint jit dump
   Dump an in-memory JIT object into a file.
 
+info devices
+  Show additional information about inferiors which are considered
+  devices by GDB.  For devices, the description displayed by 'info
+  inferiors' has been changed.  The new description displays them as a
+  'device' together with their PCI slot and sub-device ID.  This allows
+  one to uniquely identify devices in 'info inferiors' with devices
+  displayed in 'info devices'.
+
 * MI changes
 
   ** '-break-insert -l'
